# python-sentry-logger-wrapper

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: lint.yml  pr-validation.yml  publish.yml  run-tests.yml
python_sentry_logger_wrapper/: __init__.py  _processors.py  core.py
tests/: conftest.py  test_core.py  test_processors.py  test_renderers.py  test_sentry_integration.py  test_transport_capture.py
