[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-struct-logger"
dynamic = ["version"]
description = "Standardized structured (JSON) logging package with Sentry integration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "structlog>=23.0.0",
    "sentry-sdk[fastapi]>=2.46.0",
]

[project.optional-dependencies]
lambda = ["sentry-sdk[aws-lambda]>=2.49.0"]

[project.urls]
Homepage = "https://github.com/HEAL-Engineering/python-sentry-logger-wrapper"
Issues = "https://github.com/HEAL-Engineering/python-sentry-logger-wrapper/issues"

[tool.setuptools_scm]
# Used when building outside a git checkout (e.g. an sdist without SCM metadata).
fallback_version = "0.0.0+unknown"
# PyPI rejects local-version segments (e.g. "+gabc1234"); strip them on dev builds.
local_scheme = "no-local-version"